k8s/apps/hello-world/hello-world/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging

spec:
  rules:
    - host: test.slashdev.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
  tls:
  - hosts:
    - "test.slashdev.space"
    secretName: test-slashdev-space-cert
